[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec.workspace = true
assert_matches.workspace = true
itertools.workspace = true
snafu.workspace = true

[lints]
workspace = true
